large screen view adjust

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       100% { width: 100%; }
     }
   </style>
-  <body>
+  <body style="max-width: 1900px; margin: 0 auto; padding: 16px; ">
     <div id="loading-overlay" style="
     position: fixed;
     top: 0;
